--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: WP Bootstrap
-Theme URI: http://teamtreehouse.com/wordpress-bootstrap-theme-tutorial
-Description: A demo theme built to accompany the Treehouse blog post <a href="http://teamtreehouse.com/wordpress-bootstrap-theme-tutorial">How to Build a WordPress Theme with Bootstrap</a>.
-Author: Zac Gordon
-Author URI: http://teamtreehouse.com/
+Theme Name: Spotless
+Theme URI: https://github.com/explodecomputer/spotlessleopard
+Description: A theme developed for the Spotless Leopard, an amazing vegan foodtruck in Bristol, UK.
+Author: Gibran Hemani
+Author URI: http://explodecomputer.com;
 Version: 1.0
-Tags: responsive, white, bootstrap
+Tags: responsive, video
 
 License: Attribution-ShareAlike 3.0 Unported (CC BY-SA 3.0)
 License URI: http://creativecommons.org/licenses/by-sa/3.0/
@@ -13,11 +13,9 @@ License URI: http://creativecommons.org/licenses/by-sa/3.0/
 This simple theme was built using the example Bootstrap theme "Basic marketing site" found on the Bootstrap web site http://twitter.github.com/bootstrap/examples/hero.html
 */
 
-@import url('bootstrap/css/bootstrap.css'); 
-@import url('bootstrap/css/bootstrap-responsive.css'); 
+@import url('inc/css/bootstrap.min.css'); 
+/*@import url('inc/css/bootstrap-theme.css'); */
 body { 
-     padding-top: 60px; 
-     padding-bottom: 40px; 
 }
 
 .homepage-hero-module {
