--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ Video background
   border-right: solid white 10px;
   border-left: solid white 10px;
   border-bottom: solid white 10px;
+  /*border-top: solid white 10px;*/
 
 }
 .no-video .video-container video,
@@ -125,88 +126,18 @@ Navigation menu
   font-family: 'Passion One', cursive;
 }
 
-.spotlessnav {
-  /*padding-top: 50px;*/
-/*  text-align: center;
-  margin-top: -100%;
-*/  /*margin-top: 30%;*/
-}
-
-.spotlessnav  ul {
-  padding: 0;
-  margin: 0;
-  font-size: 30px;  
-  list-style-type: none;
-  color: white;
-  line-height: 200%;
-} 
-
-.spotlessnav  ul li {
-  display: inline;
-}
-
-.spotlessnav  ul ul {
-
-} 
-
-.spotlessnav  li {
-  font-size: 20px;  
-  margin: 4px;
-  /*font-family: 'Passion One', cursive;*/
-  /*font-family: 'Montserrat', sans-serif;*/
-  font-family: 'Lobster', cursive;
-  text-transform: lowercase;
-}
-
-.spotlessnav  li a {
-  /*border: 2px solid white;*/
-  color: white;
-  padding: 8px 10px;
-  background-color: red;
-  border-radius: 15px;
-}
-
-.sl {
-  border: 1px solid white;
-  border-radius: 15px;
-  padding: 0px 7px;
-  background-color: white;
-  color: black;
-}
-
-.spotlessnav  li a:hover {
-  text-decoration: none;
-  background-color: black;
-
-}
-
-.spotlessnav  li ul {
-
-}
-
-.spotlessnav  li li {
-
-}
-.spotlessnav  li li a {
-
-}
-
-.spotlessnav .current_page_item a {
-  /*border: 2px solid white;*/
-  background-color: white;
-  color: red;
-}
-
 
 .spotlessbutton {
   /*padding: 20px 40px;*/
   font-family: 'Passion One', cursive;
-  font-size: 20px;
+  font-size: 25px;
   border-radius: 0px;
   margin-right: 10px;
-  color: purple;
+  color: white;
+  background-color: purple;
+  border: none;
   text-transform: uppercase;
-  
+
 }
 
 .headline {
@@ -216,7 +147,8 @@ Navigation menu
 
 /* navbar */
 .navbar-default {
-    background-color: rgba(0,0,0,0);
+    /*background-color: rgba(0,0,0,0);*/
+    background-color: white;
     border-top: none;
     border-bottom: none;
     /*border-radius: 20px;*/
@@ -235,18 +167,18 @@ Navigation menu
 }
 /* link */
 .navbar-default .navbar-nav > li > a {
-    color: white;
-    background-color: red;
+    color: red;
+    /*background-color: red;*/
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #333;
+    color: red;
 }
-.navbar-default .navbar-nav > .active > a, 
-.navbar-default .navbar-nav > .active > a:hover, 
-.navbar-default .navbar-nav > .active > a:focus {
-    color: #555;
-    background-color: red;
+.navbar-default .navbar-nav > .current-menu-item > a, 
+.navbar-default .navbar-nav > .current-menu-item > a:hover, 
+.navbar-default .navbar-nav > .current-menu-item > a:focus {
+    color: red;
+    background-color: white;
 }
 .navbar-default .navbar-nav > .open > a, 
 .navbar-default .navbar-nav > .open > a:hover, 
@@ -273,6 +205,11 @@ Navigation menu
 /* mobile version */
 .navbar-default .navbar-toggle {
     border: 4px solid red;
+    background-color: red;
+    border-radius: 25px;
+    height: 50px;
+    margin-top: 0px;
+    margin-right: 20px;
 
     /*border: none;*/
 }
@@ -281,7 +218,7 @@ Navigation menu
     background-color: white;
 }
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: red;
+    background-color: white;
     height: 3px;
 }
 @media (max-width: 767px) {
@@ -292,4 +229,28 @@ Navigation menu
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #333;
     }
+}
+
+
+.smicons {
+  display: inline;
+  /*padding-bottom: 30px;*/
+  /*margin-top: 0px;*/
+  /*top: 0px;*/
+  margin-left: 20px;
+}
+
+.smiconimg {
+  margin-right: 10px;
+  margin-top: 10px;
+  /*padding-bottom: 20px;*/
+}
+
+
+.sl {
+  border: 1px solid white;
+  border-radius: 15px;
+  padding: 0px 7px;
+  background-color: white;
+  color: black;
 }
