--- a/style.css
+++ b/style.css
@@ -268,3 +268,12 @@ Navigation menu
   /*background-color: white;*/
   color: white;
 }
+
+
+
+
+.mapframe {
+  width: 100%;
+  height: 500px;
+  margin-top: 70px;
+}
