--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ Imports
 */
 
 @import url('css/bootstrap.min.css'); 
+@import url('css/leaflet.css'); 
 
 
 
@@ -31,17 +32,42 @@ Video background
 
 */
 
+html,body {
+  height:100%;
+}
+
 body {
-  background-color: white;
+  background-color: #CDD7B6;
+}
+
+p {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+}
+
+h1 {
+  font-family: 'Lobster', cursive;
+  font-size: 70px;
+  padding-bottom: 40px;
+}
+
+
+table {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+td {
+  padding-right: 10px;
 }
 
 .homepage-hero-module {
   border-right: none;
   border-left: none;
   position: relative;
-  border-right: solid white 10px;
-  border-left: solid white 10px;
-  border-bottom: solid white 10px;
+  border-right: solid #CDD7B6 10px;
+  border-left: solid #CDD7B6 10px;
+  border-bottom: solid #CDD7B6 10px;
   /*border-top: solid white 10px;*/
 
 }
@@ -114,33 +140,40 @@ Navigation menu
 
 */
 
-
+.buff {
+  padding-top: 70px;
+}
 .welcome {
   margin-top: 30%;
 }
 
 .welcome-button {
-  font-family: 'Passion One', cursive;
+  /*font-family: 'Passion One', cursive;*/
+  font-family: 'Lobster', cursive;
 
 }
 
 .welcome h1 {
 
-  font-family: 'Passion One', cursive;
+  /*font-family: 'Passion One', cursive;*/
+  font-family: 'Raleway', sans-serif;
+
 }
 
 
 .spotlessbutton {
   /*padding: 20px 40px;*/
-  font-family: 'Passion One', cursive;
-  font-size: 25px;
+  /*font-family: 'Passion One', cursive;*/
+  /*font-family: 'Lobster', cursive;*/
+  font-family: 'Delius Unicase', cursive;
+  font-size: 20px;
   border-radius: 5px;
   margin-right: 10px;
   margin-bottom: 10px;
   color: #031634;
   background-color: #E8DDCB;
   border: none;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 
 .spotlessbutton_map {
@@ -149,27 +182,32 @@ Navigation menu
 }
 
 .headline {
-  font-family: 'Passion One', cursive;
+  /*font-family: 'Passion One', cursive;*/
+  font-family: 'Raleway', sans-serif;
   text-align: left;
 }
 
-.headline h1 {
+.headline h2 {
   line-height: 120%;
+  font-size: 35px;
   /*letter-spacing: 180%;*/
 
 }
 
 /* navbar */
 .navbar-default {
-    /*background-color: rgba(0,0,0,0);*/
-    background-color: white;
+    background-color: rgba(255,255,255,0);
+    /*background-color: white;*/
     border-top: none;
     border-bottom: none;
     /*border-radius: 20px;*/
     margin: 10px 0px 0px 0px;
-    font-family: 'Passion One', cursive;
-    text-transform: lowercase;
-    font-size: 20px;
+    /*font-family: 'Passion One', cursive;*/
+    /*font-family: 'Lobster', cursive;*/
+    /*font-family: 'Delius Unicase', cursive;*/
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 /* title */
 .navbar-default .navbar-brand {
@@ -181,18 +219,26 @@ Navigation menu
 }
 /* link */
 .navbar-default .navbar-nav > li > a {
-    color: #031634;
+    /*color: #031634;*/
+    color: white;
     /*background-color: red;*/
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
     color: red;
 }
+.navbar-default .navbar-nav > .menu-item > a, 
+.navbar-default .navbar-nav > .menu-item > a:hover, 
+.navbar-default .navbar-nav > .menu-item > a:focus {
+    /*color: red;*/
+    background-color: rgba(255,255,255,0);
+}
 .navbar-default .navbar-nav > .current-menu-item > a, 
 .navbar-default .navbar-nav > .current-menu-item > a:hover, 
 .navbar-default .navbar-nav > .current-menu-item > a:focus {
-    color: red;
-    background-color: white;
+    color: black;
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 30px;
 }
 .navbar-default .navbar-nav > .open > a, 
 .navbar-default .navbar-nav > .open > a:hover, 
@@ -251,7 +297,7 @@ Navigation menu
   /*padding-bottom: 30px;*/
   /*margin-top: 0px;*/
   /*top: 0px;*/
-  margin-left: 20px;
+  margin-left: 0px;
 }
 
 .smiconimg {
@@ -262,7 +308,8 @@ Navigation menu
 
 
 .sl {
-  border: 5px dotted white;
+  font-family: 'Lobster', sans-serif;
+  /*border: 5px dotted white;*/
   border-radius: 15px;
   padding: 0px 7px;
   /*background-color: white;*/
@@ -275,5 +322,37 @@ Navigation menu
 .mapframe {
   width: 100%;
   height: 500px;
-  margin-top: 70px;
+  /*margin-top: 70px;*/
+}
+
+
+.special, .special .jumbotron {
+  height:100%;
+}
+
+
+.jumbotron {
+  padding: 0px;
+}
+
+
+
+
+
+.timeint {
+  font-family: 'Passion One', cursive;
+/*  background-color: black;
+  color: white;
+  border-radius: 30px 0px 0px 30px;
+  border: 1px black solid;
+  padding: 5px;
+*/  font-size: 14px;
+}
+
+.wday {
+  font-family: 'Passion One', cursive;
+/*  border: 1px black solid;
+  border-radius: 0px 30px 30px 0px;
+  padding: 5px;
+*/  font-size: 14px;
 }
