--- a/style.css
+++ b/style.css
@@ -40,23 +40,23 @@ body {
   /*background-color: #FBEFD5;*/
 }
 
-#about {
+.about {
   /*background-color: red;*/
 }
 
-#menu {
+.menu {
   background-color: #221C28;
 }
 
-#location {
+.location {
   background-color: #F3FAE2;
 }
 
-#pop-ups {
+.pop-ups {
   background-color: #F7E7B2;
 }
 
-#partners {
+.partners {
   background-color: #DA770B;
 }
 
@@ -402,7 +402,7 @@ Navigation menu
   font-family: 'Passion One', cursive;
 }
 
-.footerjumbo {
+#footerjumbo {
   margin: 0px;
   /*height: 100%;*/
   vertical-align: middle;
@@ -411,28 +411,55 @@ Navigation menu
   padding: 0px;
   margin-top: 60px;
   border-top: 1px solid black;
-  background-image: url(inc/img/dark_wood.png);
-  background-repeat: repeat;
+  background-image: url(inc/img/wildtextures-wooden-chopping-board-texture-2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   background-position: 0% 25%;
 }
 
 
-.footerjumbo h3 {
-  font-family: 'Pontano Sans', sans-serif;
-  font-size: 12px;
+#footerjumbo h3 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 14px;
   text-transform: uppercase;
-  color: #aaa;
+  color: white;
+  padding: 10px;
+  background-color: rgba(0,0,0,0.8);
 }
 
-.footerjumbo p {
+#footerjumbo p, #footerjumbo a {
   font-family: 'Pontano Sans', sans-serif;
-  font-size: 14px;
-  color: #eee;
+  font-size: 16px;
+  color: #333;
+}
+
+#footerjumbo p {
+  padding: 10px;
+  background-color: rgba(255,255,255,0.9);
+}
+
+
+#footerjumbo a:hover {
+  border-bottom: 1px dotted #333;
+  text-decoration: none;
 }
 
 footer {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+
+.aboutjumbo {
+  /*margin-bottom: 0px;*/
+  background-image: url(inc/img/massiveface.jpg);
+  /*background-color: red;*/
+  height: 500px;
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0px;
+  color: white;
 }
 
 .menujumbo {
@@ -471,7 +498,7 @@ footer {
   color: white;
 }
 
-.menujumbo h1, .popupjumbo h1, .partnersjumbo h1 {
+.menujumbo h1, .popupjumbo h1, .partnersjumbo h1, .aboutjumbo h1 {
   margin-top: 160px;
   font-family: 'Lora', serif;
   font-size: 100px;
@@ -479,11 +506,11 @@ footer {
   padding-left: 0px;
 }
 
-#location h1, #location p {
+.location h1, .location p {
   color: #660066;
 }
 
-#pop-ups h1, #pop-ups p {
+.pop-ups h1, .pop-ups p {
   color: #1784A4;
 }
 
@@ -495,7 +522,7 @@ footer {
   color: #fff;
 }
 
-#partners p {
+.partners p {
   color: white;
 }
 
@@ -552,4 +579,15 @@ h5 {
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
   /*text-transform: uppercase;*/
+}
+
+
+.arrowlink {
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+  color: black;
+}
+
+.arrowlink img {
+  margin-right: 7px;
 }
