--- a/style.css
+++ b/style.css
@@ -262,11 +262,13 @@ Navigation menu
 .navbar-default .navbar-nav > li > a {
     /*color: #031634;*/
     color: white;
+    border-bottom: 1px solid transparent;
     /*background-color: red;*/
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: red;
+    border-bottom: 1px white solid;
+    color: white;
 }
 .navbar-default .navbar-nav > .menu-item > a, 
 .navbar-default .navbar-nav > .menu-item > a:hover, 
@@ -277,9 +279,10 @@ Navigation menu
 .navbar-default .navbar-nav > .current-menu-item > a, 
 .navbar-default .navbar-nav > .current-menu-item > a:hover, 
 .navbar-default .navbar-nav > .current-menu-item > a:focus {
-    color: black;
-    background-color: rgba(255,255,255,0.7);
-    border-radius: 30px;
+    /*text-decoration: underline;*/
+    color: white;
+    border-bottom: 1px white solid;
+    /*border-radius: 30px;*/
 }
 .navbar-default .navbar-nav > .open > a, 
 .navbar-default .navbar-nav > .open > a:hover, 
@@ -377,6 +380,10 @@ Navigation menu
 }
 
 
+.openingtimes .wday {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+}
 
 
 
