--- a/style.css
+++ b/style.css
@@ -41,11 +41,11 @@ body {
 }
 
 .about {
-  /*background-color: red;*/
+  /*background-color: #1A0202;*/
 }
 
 .menu {
-  background-color: #221C28;
+  /*background-color: #221C28;*/
 }
 
 .location {
@@ -452,6 +452,7 @@ Navigation menu
 #footerjumbo a {
   border-bottom: 1px dotted #333;
   text-decoration: none;
+  padding-right: 0px;
 }
 
 footer {
@@ -462,7 +463,7 @@ footer {
 
 .aboutjumbo {
   /*margin-bottom: 0px;*/
-  background-image: url(inc/img/massiveface.jpg);
+  background-image: url(inc/img/bigface.jpg);
   /*background-color: red;*/
   height: 500px;
   background-position: 0% 25%;
@@ -486,7 +487,7 @@ footer {
 
 .popupjumbo {
   /*margin-bottom: 0px;*/
-  background-image: url(inc/img/reuben.png);
+  background-image: url(inc/img/raspberries.jpg);
   /*background-color: red;*/
   height: 500px;
   background-position: 0% 25%;
@@ -495,6 +496,19 @@ footer {
   margin: 0px;
   color: white;
 }
+
+.eventjumbo {
+  /*margin-bottom: 0px;*/
+  background-image: url(inc/img/choc.JPG);
+  /*background-color: red;*/
+  height: 500px;
+  background-position: 0% 25%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0px;
+  color: white;
+}
+
 
 .partnersjumbo {
   /*margin-bottom: 0px;*/
@@ -602,19 +616,32 @@ h5 {
   margin-right: 7px;
 }
 
-.bigdate {
+p.month {
+  margin-bottom: -10px;
+  color: grey;
+}
+
+p.bigday {
+  margin-bottom: -10px;
 }
 
 .month {
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
-  font-size: 20px;
-  padding-bottom: -10px;
+  font-size: 20px; 
+}
+
+.bigyear {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: orange;
 }
 
 .bigday {
   font-family: 'Oswald', sans-serif;
   font-size: 30px;
+  color: orange;
 }
 
 .excerpt p {
@@ -651,4 +678,48 @@ hr.fuzzy {
 
 .popupinfo p {
   font-size: 18px;
+}
+
+.popuptitle h2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 30px;
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.popuptitle h3 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.leftborder {
+  border-left: 1px solid grey;
+}
+
+.rightborder {
+  border-right: 1px solid grey;
+}
+
+#credits, #credits a {
+  font-size: 10px;
+}
+
+
+#photocredit, #photocredit a {
+  font-size: 10px;
+  color: black;
+  /*margin-top: 30px;*/
+  /*top: 30px;*/
+}
+
+.menublurb p {
+  font-size: 16px;
+  font-family: 'Quattrocento', serif;
+  color: grey;
 }
