--- a/style.css
+++ b/style.css
@@ -278,12 +278,15 @@ Navigation menu
     /*color: #031634;*/
     color: white;
     border-bottom: 1px solid transparent;
+    padding: 15px;
+    margin: 0px;
     /*background-color: red;*/
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
     border-bottom: 1px white solid;
     color: white;
+    /*text-decoration: underline;*/
 }
 .navbar-default .navbar-nav > .menu-item > a, 
 .navbar-default .navbar-nav > .menu-item > a:hover, 
@@ -323,30 +326,41 @@ Navigation menu
 }
 /* mobile version */
 .navbar-default .navbar-toggle {
-    border: 4px solid red;
+    border: 0px solid red;
     background-color: red;
-    border-radius: 25px;
-    height: 50px;
+    border-radius: 15px;
+    height: 30px;
     margin-top: 10px;
-    margin-right: 20px;
+    margin-right: 32px;
 
     /*border: none;*/
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: white;
+    background-color: red;
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color: white;
-    height: 3px;
+    height: 1px;
 }
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
         color: #777;
+        text-align: center;
     }
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: #333;
+        border: none;
+    }
+    .navbar-default {
+      padding-top: 0px;
+      padding-bottom: 0px;
+      background-color: #3B4952;
+    }
+    .navbar-default .navbar-nav > li {
+      margin-right: 10px;
+      text-align: center;
     }
 }
 
@@ -714,7 +728,11 @@ hr.fuzzy {
   padding-bottom: 10px;
   text-transform: uppercase;
 }
-
+@media (max-width: 767px) {
+  .popuptitle h3 {
+    text-align: left;
+  }
+}
 .popuptitle h3 {
   font-family: 'Oswald', sans-serif;
   font-size: 20px;
@@ -760,6 +778,19 @@ hr.fuzzy {
   color: #A2101D;
   font-size: 20px;
 }
+
+@media (max-width: 767px) {
+  .la h2, .lwd h2 {
+    text-align: left;
+  }
+  .rightborder {
+    border: none;
+  }
+  .leftborder {
+    border: none;
+  }
+}
+
 
 .la p {
   color: #A2101D;
