changed chopping board

--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ a.vanheadline {
   margin-top: 60px;
   /*border-top: 1px solid black;*/
   /*background-image: url(inc/img/wildtextures-wooden-chopping-board-texture-2.jpg);*/
-  background-image: url(inc/img/N19-2_CleanChoppingBoard.jpg);
+  background-image: url(inc/img/chopspot.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0% 25%;
