--- a/style.css
+++ b/style.css
@@ -273,6 +273,11 @@ a.vanheadline {
   border: none;
 }
 
+a.locationpin {
+  padding-left: 20px;
+  background: transparent url(inc/img/pin2_20.png) no-repeat top left;
+  border: none;
+}
 
 
 @media (max-width: 992px) {
@@ -493,6 +498,24 @@ a.vanheadline {
   padding: 5px;
 */  font-size: 14px;
 }
+
+
+.locationinfoblurb {
+  font-family: 'romanitalic', cursive;
+/*  border: 1px black solid;
+  border-radius: 0px 30px 30px 0px;
+  padding: 5px;
+*/  font-size: 17px;
+}
+
+.locationinfoblurb2 {
+  font-family: 'Passion One', cursive;
+/*  border: 1px black solid;
+  border-radius: 0px 30px 30px 0px;
+  padding: 5px;
+*/  font-size: 17px;
+}
+
 
 .tabletime {
   font-family: 'Passion One', cursive;
@@ -845,6 +868,11 @@ hr.fuzzy {
 .stagedirections p {
   font-family: 'romanitalic', serif;
   font-size: 16px;
+}
+
+.locationdirections p {
+  font-family: 'romanitalic', serif;
+  font-size: 18px;
 }
 
 
