--- a/style.css
+++ b/style.css
@@ -236,6 +236,9 @@ Navigation menu
 
 .headline h4 {
   font-family: 'Quattrocento', serif;
+      /*font-family: 'Pontano Sans', sans-serif;*/
+    /*text-transform: uppercase;*/
+
   /*text-shadow: 1px 1px rgba(255,255,255, 0.5);*/
   line-height: 120%;
   font-size: 16px;
@@ -573,7 +576,7 @@ footer {
 
 .aboutjumbo {
   /*margin-bottom: 0px;*/
-  background-image: url(inc/img/bigface.jpg);
+  background-image: url(inc/img/louiseinvan.jpg);
   /*background-color: red;*/
   height: 500px;
   background-position: 0% 25%;
@@ -852,9 +855,13 @@ hr.fuzzy {
 }
 
 
-#photocredit, #photocredit a {
+#photocredit {
+  position: absolute;
+  top: 485px;
+  right: 5px;
   font-size: 10px;
   color: black;
+  z-index: 99999;
   /*margin-top: 30px;*/
   /*top: 30px;*/
 }
