--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ Imports
 
 @import url('css/bootstrap.min.css'); 
 @import url('css/leaflet.css'); 
+@import url('css/lightbox.css'); 
 
 
 @font-face {
